--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "source-map-support": "^0.5.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.116",
     "@types/node": "10.5.5",
+    "semantic-release": "^15.9.3",
     "tap": "github:snyk/node-tap#alternative-runtimes",
     "ts-node": "7.0.0",
     "tslint": "5.11.0",
-    "typescript": "3.0.1",
-    "semantic-release": "^15.9.3"
+    "typescript": "3.0.1"
   }
 }
