feat: add support for yarn 2 lock files

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "/dev/null", 
+    "outDir": "/dev/null"
   },
   "include": [
     "./lib/**/*",
