--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
             "es2017"
         ],
         "module": "commonjs",
+        "skipLibCheck": true,
         "sourceMap": true,
         "declaration": true,
         "importHelpers": true,
