--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
   "homepage": "https://github.com/snyk/nodejs-lockfile-parser#readme",
   "dependencies": {
     "@snyk/graphlib": "2.1.9-patch",
-    "@snyk/lodash": "^4.17.15-patch",
     "@yarnpkg/core": "^2.0.0-rc.26",
     "@yarnpkg/lockfile": "^1.1.0",
     "event-loop-spinner": "^2.0.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isempty": "^4.4.0",
+    "lodash.set": "^4.3.2",
+    "lodash.topairs": "^4.3.0",
     "p-map": "2.1.0",
     "snyk-config": "^3.0.0",
     "source-map-support": "^0.5.7",
