--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "debug": "^4.3.4",
     "eslint": "7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^28.1.3",
