--- a/package.json
+++ b/package.json
@@ -31,19 +31,21 @@
   ],
   "homepage": "https://github.com/snyk/nodejs-lockfile-parser#readme",
   "dependencies": {
+    "@pnpm/lockfile-types": "^5.1.5",
     "@snyk/dep-graph": "^2.3.0",
     "@snyk/graphlib": "2.1.9-patch.3",
     "@yarnpkg/core": "^2.4.0",
     "@yarnpkg/lockfile": "^1.1.0",
+    "dependency-path": "^9.2.8",
     "event-loop-spinner": "^2.0.0",
     "js-yaml": "^4.1.0",
     "lodash.clonedeep": "^4.5.0",
-    "p-map": "^4.0.0",
     "lodash.flatmap": "^4.5.0",
     "lodash.isempty": "^4.4.0",
     "lodash.topairs": "^4.3.0",
     "micromatch": "^4.0.5",
-    "semver": "^7.3.5",
+    "p-map": "^4.0.0",
+    "semver": "^7.6.0",
     "snyk-config": "^5.0.0",
     "tslib": "^1.9.3",
     "uuid": "^8.3.0"
